# 7k2

./: .gitignore  A.BAT  ALL.H  ALL.INC  CLASSES.TXT  CMakeLists.txt  COPYDEMO.BAT  COPYING  COPYX.BAT  COPYX1.BAT  DELSRC.BAT  EnglishToChinese.cpp  EnglishToChinese.h  GAMEDEF.H  IB_AHRD.ASM  IB_ARM.ASM  IB_ATRD.ASM  IB_ATRM.ASM  IB_BARM.ASM  IB_BRM.ASM  IB_HRD.ASM  IB_HRDM.ASM  IB_TR.ASM  IB_TRD.ASM  IB_WAR.ASM  IB_WARM.ASM  IB_WRM.ASM  IC.ASM  IMGFUN.H  INSTALL.MSVC.md  INSTALL.md  IP_TD.ASM  I_ALPHA.ASM  I_BRIGHT.ASM  I_CTRL.ASM  KEY.H  Makefile.am  OAI_ACT.CPP  OAI_ACT2.CPP  OAI_CAP2.CPP  (+1035 more)
16asm/: COLCODE.INC  IB_ARM.ASM  IB_ATRDM.ASM  IB_R.ASM  IB_T.ASM  IB_TRDM.ASM  I_LINE.ASM  I_effect.asm  all.inc  colcode.h  colcode.inc  i_bar.asm  i_ctrl.asm  i_effect.asm  i_effect.inc  i_read.asm  ib.asm  ib_a.asm  ib_ar.asm  ib_arm.asm  ib_atr.asm  ib_atrd.asm  ib_atrdm.asm  ib_atrm.asm  ib_r.asm  ib_rm.asm  ib_t.asm  ib_tr.asm  ib_trd.asm  ib_trdm.asm  ib_trm.asm  ic.asm  ij_tr.asm  imgfun.h  imgfun.inc
8asm/: all.inc  colcode.h  colcode.inc  i_bar.asm  i_black.asm  i_ctrl.asm  i_emask.asm  i_eremap.asm  i_font.asm  i_fremap.asm  i_line.asm  i_pixel.asm  i_read.asm  i_snow.asm  i_xor.asm  ib.asm  ib2.asm  ib_32.asm  ib_a.asm  ib_ar.asm  ib_at.asm  ib_atd.asm  ib_atdm.asm  ib_atm.asm  ib_atr.asm  ib_atrd.asm  ib_atrdm.asm  ib_dw.asm  ib_r.asm  ib_rd.asm  ib_t.asm  ib_td.asm  ib_tdm.asm  ib_tm1.asm  ib_tm2.asm  ib_tm3.asm  ib_tr.asm  ib_trd.asm  ib_trdm.asm  ic.asm  (+9 more)
cmake/modules/: CMakeASM_JWASMInformation.cmake  CMakeDetermineASM_JWASMCompiler.cmake  CMakeTestASM_JWASMCompiler.cmake  FindENet.cmake  FindSDL2.cmake  FindWine.cmake
include/: Makefile.am  all.h  asmfun.h  audio_base.h  audio_stream.h  c99_printf.h  colcode.h  crc.h  dbglog.h  file_input_stream.h  file_io_visitor.h  file_output_stream.h  file_reader.h  file_util.h  file_writer.h  gamedef.h  imgfun.h  input_stream.h  mem_input_stream.h  mouse_none.h  mouse_sdl.h  mptypes.h  multiplayer.h  oanline.h  oaudio.h  ob_flame.h  ob_homin.h  ob_prog.h  ob_proj.h  obaseobj.h  obattle.h  obitmapw.h  oblob2.h  oblob2w.h  obox.h  obullet.h  obutt3d.h  obuttcus.h  obutton.h  oc_east.h  (+198 more)
misc/: 9B.TXT  AD.BAT  COORDIN.TXT  COPYX3.BAT  DO-LIST.TXT  JH.TXT  ZIP.BAT  ZIPSRC.LST  am2.dsp  am2.dsw  copyx4.bat  copyx5.bat  oai_mar2.cp1  oai_mari.cp1
misc/t/: obullet.cpp  oun_atk.cpp  oun_grp.cpp  oun_info.cpp
misc/temp/: oun_grp.cpp  ounitb.cpp
src/: CMakeLists.txt  Makefile.am  am.cpp  dbglog.cpp  file_input_stream.cpp  file_output_stream.cpp  file_reader.cpp  file_util.cpp  file_writer.cpp  input_stream.cpp  mem_input_stream.cpp  mouse_none.cpp  mouse_sdl.cpp  multiplayer.cpp  oai_act.cpp  oai_act2.cpp  oai_attk.cpp  oai_buil.cpp  oai_cap2.cpp  oai_capt.cpp  oai_defe.cpp  oai_dipl.cpp  oai_eco.cpp  oai_gran.cpp  oai_info.cpp  oai_main.cpp  oai_mili.cpp  oai_quer.cpp  oai_seek.cpp  oai_spy.cpp  oai_talk.cpp  oai_unit.cpp  oanline.cpp  oattack.cpp  oaudio.cpp  ob_flame.cpp  ob_homin.cpp  ob_prog.cpp  ob_proj.cpp  obaseoba.cpp  (+441 more)
src/16asm/: all.inc  colcode.h  colcode.inc  i_bar.asm  i_ctrl.asm  i_effect.asm  i_effect.inc  i_line.asm  i_read.asm  ib.asm  ib_a.asm  ib_arm.asm  ib_at.asm  ib_atrd.asm  ib_atrdm.asm  ib_atrm.asm  ib_r.asm  ib_t.asm  ib_tr.asm  ib_trd.asm  ib_trdm.asm  ib_trm.asm  ic.asm  ij_tr.asm  imgfun.inc
src/8asm/: colcode.h  colcode.inc  i_bar.asm  i_black.asm  i_ctrl.asm  i_emask.asm  i_eremap.asm  i_font.asm  i_fremap.asm  i_line.asm  i_pixel.asm  i_read.asm  i_snow.asm  i_xor.asm  ib.asm  ib2.asm  ib_32.asm  ib_a.asm  ib_ar.asm  ib_at.asm  ib_atd.asm  ib_atdm.asm  ib_atm.asm  ib_atr.asm  ib_atrd.asm  ib_atrdm.asm  ib_dw.asm  ib_r.asm  ib_rd.asm  ib_t.asm  ib_td.asm  ib_tdm.asm  ib_tm1.asm  ib_tm2.asm  ib_tm3.asm  ib_tr.asm  ib_trd.asm  ib_trdm.asm  ic.asm  ic_r.asm  (+8 more)
src/asm/: CMakeLists.txt  all.inc  colcode.inc  crc.asm  i_alpha.asm  i_bar.asm  i_bright.asm  i_ctrl.asm  i_effect.asm  i_read.asm  i_scroll.asm  ib.asm  ib_a.asm  ib_ahrd.asm  ib_ahrdm.asm  ib_ar.asm  ib_arm.asm  ib_atk.asm  ib_atr.asm  ib_atrd.asm  ib_atrdm.asm  ib_atrm.asm  ib_bar.asm  ib_barm.asm  ib_br.asm  ib_brm.asm  ib_hrd.asm  ib_hrdm.asm  ib_rm.asm  ib_t.asm  ib_tk.asm  ib_tr.asm  ib_trd.asm  ib_trdm.asm  ib_trm.asm  ib_war.asm  ib_warm.asm  ib_wr.asm  ib_wrm.asm  ic.asm  (+2 more)
src/imgfun/: CMakeLists.txt  Makefile.am  crc.cpp  i_alpha.cpp  i_bar.cpp  i_bright.cpp  i_effect.cpp  i_line.cpp  i_read.cpp  i_scroll.cpp  ib.cpp  ib_a.cpp  ib_ahrd.cpp  ib_ahrdm.cpp  ib_ar.cpp  ib_at.cpp  ib_atr.cpp  ib_atrd.cpp  ib_atrdm.cpp  ib_atrm.cpp  ib_bar.cpp  ib_barm.cpp  ib_br.cpp  ib_brm.cpp  ib_hrd.cpp  ib_hrdm.cpp  ib_r.cpp  ib_t.cpp  ib_tr.cpp  ib_trd.cpp  ib_trdm.cpp  ib_trm.cpp  ib_war.cpp  ib_warm.cpp  ib_wr.cpp  ib_wrm.cpp  ic.cpp  ij_tr.cpp  seekforward.cpp
t/: OUN_GRP.CPP  OUN_INFO.CPP  obullet.cpp  of_campi.cpp  of_work.cpp  ogamcamp.cpp  ogamsing.cpp  onews.cpp  or_nat.cpp  oun_atk.cpp  oun_grp.cpp  oun_if.cpp  oun_info.cpp  oun_proc.cpp
temp/: Oun_grp.cpp  Ounitb.cpp  oun_grp.cpp  ounitb.cpp
