cmake_minimum_required(VERSION 2.8)
project(7K2)
set(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake/modules)

if(${MSVC})
  set(CMAKE_PREFIX_PATH ""
      CACHE PATH "Path to 3rd party libraries")
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
  include(CheckIncludeFile)
  CHECK_INCLUDE_FILE(stdint.h HAVE_STDINT_H)
  if(NOT ${HAVE_STDINT_H})
    include_directories(${CMAKE_HOME_DIRECTORY/cmake/include})
  endif()
endif()

find_package(JPEG REQUIRED)
find_package(OpenAL REQUIRED)
find_package(SDL2 REQUIRED)
add_subdirectory(src/imgfun)
add_subdirectory(src)
