cmake_minimum_required(VERSION 2.8)
project(7K2)
set(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake/modules)

if(${MSVC})
  if(NOT ${CMAKE_PREFIX_PATH})
    set(CMAKE_PREFIX_PATH ""
        CACHE PATH "Path to 3rd party libraries")
  endif()
  add_definitions(/D_CRT_SECURE_NO_WARNINGS /DWIN32_LEAN_AND_MEAN)
  find_path(HAVE_STDINT_H stdint.h)
  if(NOT ${HAVE_STDINT_H})
    include_directories(${CMAKE_HOME_DIRECTORY}/cmake/include)
  endif()
endif()

find_package(JPEG REQUIRED)
find_package(OpenAL REQUIRED)
find_package(SDL2 REQUIRED)
add_subdirectory(src/imgfun)
add_subdirectory(src)
