noinst_HEADERS = \
	all.h \
	asmfun.h \
	audio_base.h \
	audio_stream.h \
	c99_printf.h \
	colcode.h \
	color.h \
	crc.h \
	dbglog.h \
	file_input_stream.h \
	file_io_visitor.h \
	file_output_stream.h \
	file_reader.h \
	file_util.h \
	file_writer.h \
	gamedef.h \
	imgfun.h \
	input_stream.h \
	itemid.h \
	key.h \
	mem_input_stream.h \
	mouse_sdl.h \
	mptypes.h \
	multiplayer.h \
	oanline.h \
	oattack.h \
	oaudio.h \
	ob_flame.h \
	ob_homin.h \
	ob_prog.h \
	ob_proj.h \
	obaseobj.h \
	obattle.h \
	obitmap.h \
	obitmapw.h \
	oblob.h \
	oblob2.h \
	oblob2w.h \
	obox.h \
	obullet.h \
	obutt3d.h \
	obuttcus.h \
	obutton.h \
	oc_au.h \
	oc_east.h \
	ocampall.h \
	ocampgn.h \
	ocoltbl.h \
	oconfig.h \
	ocrc_sto.h \
	odate.h \
	odb.h \
	odir.h \
	odynarr.h \
	odynarrb.h \
	oeffect.h \
	oend_con.h \
	oerrctrl.h \
	oerror.h \
	oevent.h \
	oexpmask.h \
	of_alch.h \
	of_anim.h \
	of_base.h \
	of_camp.h \
	of_fact.h \
	of_fort.h \
	of_incu.h \
	of_inn.h \
	of_lair.h \
	of_lish.h \
	of_magi.h \
	of_mark.h \
	of_mfort.h \
	of_mine.h \
	of_mons.h \
	of_mtrn.h \
	of_off.h \
	of_off2.h \
	of_rese.h \
	of_spec.h \
	of_spy.h \
	of_train.h \
	of_war.h \
	of_work.h \
	ofile.h \
	ofiletxt.h \
	ofirm.h \
	ofirma.h \
	ofirmall.h \
	ofirmdie.h \
	ofirmid.h \
	ofirmres.h \
	oflame.h \
	oflc.h \
	ofont.h \
	ogame.h \
	ogameset.h \
	ogammenu.h \
	ogeta.h \
	ogfile.h \
	ogodres.h \
	ohelp.h \
	oherores.h \
	ohillres.h \
	ohsetres.h \
	oimgres.h \
	oinfo.h \
	oingmenu.h \
	oisoarea.h \
	oitem.h \
	oitemres.h \
	ojpeg.h \
	olightn.h \
	olinear.h \
	olocate.h \
	olocbmp.h \
	olog.h \
	olonglog.h \
	omagic.h \
	omatrix.h \
	omisc.h \
	omlink.h \
	omodeid.h \
	omonsres.h \
	omouse.h \
	omousecr.h \
	omusic.h \
	onation.h \
	onation2.h \
	onationa.h \
	onationb.h \
	onews.h \
	ooptmenu.h \
	openal_audio.h \
	opfind.h \
	oplace.h \
	oplant.h \
	oplasma.h \
	opower.h \
	opreuse.h \
	oprofile.h \
	oraceres.h \
	orain.h \
	orawres.h \
	orebel.h \
	oregion.h \
	oregions.h \
	oremote.h \
	oremoteq.h \
	ores.h \
	oresdb.h \
	orespal.h \
	orestxt.h \
	oresx.h \
	orle.h \
	orock.h \
	orockres.h \
	oscroll.h \
	ose.h \
	oseditor.h \
	oseres.h \
	oserial.h \
	osfrmres.h \
	osite.h \
	oskill.h \
	oslidcus.h \
	oslider.h \
	osnow.h \
	osnowg.h \
	osnowres.h \
	osoldier.h \
	ospin_s.h \
	ospinner.h \
	osprite.h \
	osprtres.h \
	ospy.h \
	ostate.h \
	ostr.h \
	osys.h \
	ot_basic.h \
	ot_camp.h \
	ot_endc.h \
	ot_firm.h \
	ot_gmenu.h \
	ot_item.h \
	ot_news.h \
	ot_reps.h \
	ot_sedit.h \
	ot_talk.h \
	ot_tutor.h \
	ot_unit.h \
	otalkmsg.h \
	otalkres.h \
	otarray.h \
	otech.h \
	otechres.h \
	oterrain.h \
	otips.h \
	otornado.h \
	otown.h \
	otownrec.h \
	otownres.h \
	otrainee.h \
	otransl.h \
	otutor.h \
	otwalres.h \
	otxtres.h \
	ou_cara.h \
	ou_cart.h \
	ou_god.h \
	ou_mons.h \
	ou_wagon.h \
	oun_grp.h \
	oun_spab.h \
	ounit.h \
	ounitall.h \
	ounitres.h \
	output_stream.h \
	ovbrowif.h \
	ovbrowse.h \
	ovga.h \
	ovgabuf.h \
	ovgalock.h \
	ovolume.h \
	ovqueue.h \
	ow_trv.h \
	owallres.h \
	owarpt.h \
	owaypnt.h \
	oweather.h \
	oworld.h \
	oworldmt.h \
	player_desc.h \
	resource.h \
	surface.h \
	surface_sdl.h \
	unittype.h \
	vga_base.h \
	vga_sdl.h \
	vga_util.h \
	walltile.h \
	wav_stream.h \
	win32_compat.h
