set(imgfun_SOURCES
  crc.asm
  i_alpha.asm
  i_bar.asm
  i_bright.asm
  i_ctrl.asm
  i_effect.asm
  i_line.asm
  i_read.asm
  i_scroll.asm
  ib.asm
  ib_a.asm
  ib_ahrd.asm
  ib_ahrdm.asm
  ib_ar.asm
  ib_arm.asm
  ib_at.asm
  ib_atk.asm
  ib_atr.asm
  ib_atrd.asm
  ib_atrdm.asm
  ib_atrm.asm
  ib_bar.asm
  ib_barm.asm
  ib_br.asm
  ib_brm.asm
  ib_hrd.asm
  ib_hrdm.asm
  ib_r.asm
  ib_rm.asm
  ib_t.asm
  ib_tk.asm
  ib_tr.asm
  ib_trd.asm
  ib_trdm.asm
  ib_trm.asm
  ib_war.asm
  ib_warm.asm
  ib_wr.asm
  ib_wrm.asm
  ic.asm
  ij_tr.asm
  ip_td.asm)

if(UNIX)
  enable_language(ASM_JWASM)
  set_source_files_properties(${imgfun_SOURCES} PROPERTIES COMPILE_FLAGS "-q")
endif(UNIX)

add_library(imgfun STATIC ${imgfun_SOURCES})
