set(cimgfun_SOURCES
  crc.cpp
  i_alpha.cpp
  i_bar.cpp
  i_bright.cpp
  i_effect.cpp
  i_line.cpp
  i_read.cpp
  i_scroll.cpp
  ib.cpp
  ib_a.cpp
  ib_ahrd.cpp
  ib_ahrdm.cpp
  ib_ar.cpp
  ib_at.cpp
  ib_atr.cpp
  ib_atrd.cpp
  ib_atrdm.cpp
  ib_atrm.cpp
  ib_bar.cpp
  ib_barm.cpp
  ib_br.cpp
  ib_brm.cpp
  ib_hrd.cpp
  ib_hrdm.cpp
  ib_r.cpp
  ib_t.cpp
  ib_tr.cpp
  ib_trd.cpp
  ib_trdm.cpp
  ib_trm.cpp
  ib_war.cpp
  ib_warm.cpp
  ib_wr.cpp
  ib_wrm.cpp
  ic.cpp
  ij_tr.cpp
  seekforward.cpp)

include_directories(${7K2_SOURCE_DIR}/include)
add_library(cimgfun STATIC ${cimgfun_SOURCES})
